k8s/api/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: cors
  namespace: hospital
spec:
  headers:
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
      - PATCH
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginList:
      - "http://admin.44.205.19.225.nip.io"
      - "http://44.205.19.225.nip.io"
    accessControlAllowCredentials: true
    accessControlMaxAge: 3600
    addVaryHeader: true
