k8s/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hospital-api
  namespace: hospital
  labels:
    app: hospital-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hospital-api
  template:
    metadata:
      labels:
        app: hospital-api
    spec:
      containers:
        - name: hospital-api
          image: ashrafkhan0277/hospital-backend:68
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
