k8s/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hospital-api-svc
  namespace: hospital
  labels:
    app: hospital-api
spec:
  type: ClusterIP
  selector:
    app: hospital-api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
