k8s/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hospital-api-ingress
  namespace: hospital
  labels:
    app.kubernetes.io/part-of: hospital
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: hospital-cors@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - host: api.44.205.19.225.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hospital-api-svc
                port:
                  number: 8000
